Make the construction of the htmls/jsons file more like the handlebars one